--- a/JobsMonster/templates/base.html
+++ b/JobsMonster/templates/base.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
@@ -28,10 +29,10 @@
             <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Register</a>
+            <a class="nav-link" href="{% url 'usersignup' %}">Register</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Logout</a>
