added emailverification and some model appended

--- a/JobsMonster/templates/user/confirmemail.html
+++ b/JobsMonster/templates/user/confirmemail.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
-
-
+{% load static %}
 {% block content %}
-
-<h1>sending email</h1>
-
+                <div class="container">
+                    <p style="padding-top: 50px;padding-bottom: 70px;text-align: center;">Please check your email to find the activation link.Sometimes,email may get delivered to spam.So,check your spam folder too.</p>
+                </div>
 {% endblock %}
