--- a/JobsMonster/templates/user/register.html
+++ b/JobsMonster/templates/user/register.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="container">
+
+<div class="container-fluid">
   <div class="row">
     <div class="col-sm-9 col-md-9 col-lg-7 mx-auto">
       <div class="card card-signin my-5">
