--- a/JobsMonster/templates/jobs/home.html
+++ b/JobsMonster/templates/jobs/home.html
@@ -1,23 +1,35 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-2">
-            <h4>This is sorting place where we can sort things accordingly</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, mollitia consequatur quae possimus deleniti repellendus molestiae deserunt odio, natus aut, praesentium modi necessitatibus ea minima placeat. Libero nesciunt, laboriosam tempora.</p>
-        </div>
-        <div class="col-md-8">
-            <h2>This is thw news and profile site where a user can review the profile</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius totam mollitia nobis, voluptas ut aliquam, doloribus modi eos quas error possimus fugit explicabo quidem blanditiis! Magnam a quae autem aspernatur!</p>
-        </div>
-        <div class="col-md-2">
-            <h3>This is User site where his current Profile and actions are displayed</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quisquam perferendis veniam delectus optio, neque possimus atque reprehenderit. Earum reprehenderit, sit nulla blanditiis sed minima! Est facilis, maiores rerum ipsa.</p>
+<div class="container mt-5 mb-5">
+    <div class="d-flex justify-content-center row">
+        <div class="col-md-10">
+            <div class="row p-2 bg-white border rounded">
+                <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src=""></div>
+                <div class="col-md-6 mt-1">
+                    <h5>Prazzwal Thapa</h5>
+                    <div class="d-flex flex-row">
+                        <div class="ratings mr-2"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div><span>Total Hiring: 0</span>
+                    </div>
+                    <div class="mt-1 mb-1 spec-1"><span>Programmer</span><span class="dot"></span><span>Web Developer</span><span class="dot"></span><span>Computer Expert<br></span></div>
+                    <div class="mt-1 mb-1 spec-1"><span>Python</span><span class="dot"></span><span>Java</span><span class="dot"></span><span>JS<br></span></div>
+                    <p class="text-justify text-truncate para mb-0">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.<br><br></p>
+                </div>
+                <div class="align-items-center align-content-center col-md-3 border-left mt-1">
+                    <div class="d-flex flex-row align-items-center">
+                        <h4 class="mr-1">Pay rate: $13.99</h4>
+                    </div>
+                    <h6 class="text-success">Negotiable</h6>
+                    <div class="d-flex flex-column mt-4"><button class="btn btn-primary btn-sm" type="button">Details</button><button class="btn btn-outline-primary btn-sm mt-2" type="button">Hire Now!</button></div>
+                </div>
+            </div>
+            <br>
+            
+            
         </div>
     </div>
 </div>
+
 
 
 
