--- a/JobsMonster/templates/user/profile.html
+++ b/JobsMonster/templates/user/profile.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
-{% load static %}
-{% static 'css/style.css' %}
+
 
 {% block content %}
-
+<br>
+<br>
 <div class="container">
     <div class="row profile">
 		<div class="col-md-3">
@@ -51,14 +51,11 @@
 		</div>
 		<div class="col-md-9">
             <div class="profile-content">
-			   Some user related content goes here...
+			   {{user.skills}}
             </div>
 		</div>
 	</div>
 </div>
-<center>
-<strong>Powered by <a href="" target="_blank">KeenThemes</a></strong>
-</center>
 <br>
 <br>
 
