--- a/JobsMonster/templates/base.html
+++ b/JobsMonster/templates/base.html
@@ -50,7 +50,8 @@
             </form>
         </div>
     </nav>
-    
+    <br>
+    <br />
   {% block content %}
 
 
@@ -60,13 +61,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script type="text/javascript">
-    document.getElementById("Recruiter").onclick = function () {
+    {% comment %} document.getElementById("Recruiter").onclick = function () {
         location.href = "{% url 'usersignup' %}"
     };
     document.getElementById("freelancer").onclick = function () {
-        location.href = "{% url 'professionalsignup' %}"
-    };
+        location.href = "{% url 'professionalsignup' %}" {% endcomment %}
+    {% comment %} }; {% endcomment %}
     document.getElementById("Hire").onclick = function () {
+        console.log('clicked')
         location.href = "{% url 'hire' %}"
     };
     </script>
