--- a/JobsMonster/templates/user/profile.html
+++ b/JobsMonster/templates/user/profile.html
@@ -1,63 +1,112 @@
 {% extends 'base.html' %}
 
-
+{% load static %}
 {% block content %}
-<br>
-<br>
+
+
+
 <div class="container">
-    <div class="row profile">
-		<div class="col-md-3">
-			<div class="profile-sidebar">
-				<div class="profile-userpic">
-					<img src="" class="img-responsive" alt="">
-				</div>
-				<div class="profile-usertitle">
-					<div class="profile-usertitle-name">
-						{{user.get_fullname}}
-					</div>
-					<div class="profile-usertitle-job">
-						{{user.email}}
-					</div>
-				</div>
-				<div class="profile-userbuttons">
-					<button type="button" class="btn btn-success btn-sm">Hire</button>
-					<button type="button" class="btn btn-danger btn-sm">Message</button>
-				</div>
-				<div class="profile-usermenu">
-					<ul class="nav">
-						<li class="active">
-							<a href="#">
-							<i class="glyphicon glyphicon-home"></i>
-							Overview </a>
-						</li>
-						<li>
-							<a href="#">
-							<i class="glyphicon glyphicon-user"></i>
-							Account Settings </a>
-						</li>
-						<li>
-							<a href="#" target="_blank">
-							<i class="glyphicon glyphicon-ok"></i>
-							Tasks </a>
-						</li>
-						<li>
-							<a href="#">
-							<i class="glyphicon glyphicon-flag"></i>
-							Help </a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="col-md-9">
-            <div class="profile-content">
-			   {{user.skills}}
-            </div>
-		</div>
-	</div>
+	<div class="row">
+		<h2>Create your snippet's HTML, CSS and Javascript in the editor tabs</h2>
+        
+        
+    	<div class="col-md-7 ">
+
+			<div class="panel panel-default">
+  				<div class="panel-heading">  <h4 >User Profile</h4></div>
+  					 <div class="panel-body">
+       
+   						 <div class="box box-info">
+        
+           					 <div class="box-body">
+                    			 <div class="col-sm-6">
+                     				<div  align="center"> <img alt="User Pic" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" id="profile-image1" class="img-circle img-responsive"> 
+                
+               							 <input id="profile-image-upload" class="hidden" type="file">
+											<div style="color:#999;" >click here to change profile image</div>
+                							<!--Upload Image Js And Css-->
+           
+              
+   
+                
+                
+                     
+                     
+                     				</div>
+              
+              						<br>
+    
+              <!-- /input-group -->
+            					</div>
+            				<div class="col-sm-6">
+            				<h4 style="color:#00b1b1;">Prasad Shankar Huddedar </h4></span>
+             				<span><p>Aspirant</p></span>            
+            				</div>
+            				<div class="clearfix"></div>
+            				<hr style="margin:5px 0 5px 0;">
+    
+              
+							<div class="col-sm-5 col-xs-6 tital " >First Name:</div><div class="col-sm-7 col-xs-6 ">Prasad</div>
+     						<div class="clearfix"></div>
+							<div class="bot-border"></div>
+
+							<div class="col-sm-5 col-xs-6 tital " >Middle Name:</div><div class="col-sm-7"> Shankar</div>
+  							<div class="clearfix"></div>
+							<div class="bot-border"></div>
+
+							<div class="col-sm-5 col-xs-6 tital " >Last Name:</div><div class="col-sm-7"> Huddedar</div>
+ 							<div class="clearfix"></div>
+							<div class="bot-border"></div>
+
+							<div class="col-sm-5 col-xs-6 tital " >Date Of Joining:</div><div class="col-sm-7">15 Jun 2016</div>
+
+  							<div class="clearfix"></div>
+							<div class="bot-border"></div>
+
+							<div class="col-sm-5 col-xs-6 tital " >Date Of Birth:</div><div class="col-sm-7">11 Jun 1998</div>
+
+  							<div class="clearfix"></div>
+							<div class="bot-border"></div>
+
+							<div class="col-sm-5 col-xs-6 tital " >Place Of Birth:</div><div class="col-sm-7">Shirdi</div>
+
+ 							<div class="clearfix"></div>
+							<div class="bot-border"></div>
+
+							<div class="col-sm-5 col-xs-6 tital " >Nationality:</div><div class="col-sm-7">Indian</div>
+
+ 							<div class="clearfix"></div>
+							<div class="bot-border"></div>
+
+							<div class="col-sm-5 col-xs-6 tital " >Relition:</div><div class="col-sm-7">Hindu</div>
+
+
+            				<!-- /.box-body -->
+         			 </div>
+          <!-- /.box -->
+
+        			</div>
+       
+            
+   				 </div> 
+   			 </div>
+			</div>  
+    		<script>
+              $(function() {
+    $('#profile-image1').on('click', function() {
+        $('#profile-image-upload').click();
+    });
+});       
+            </script> 
+       
+       
+       
+       
+       
+       
+       
+       
+       
+   </div>
 </div>
-<br>
-<br>
-
-
 {% endblock %}
