--- a/JobsMonster/templates/base.html
+++ b/JobsMonster/templates/base.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg" style = "height:100px; font-size:30px;">
-        <a class="navbar-brand" href={% url 'home' %}">JobsMonster</a>
+        <a class="navbar-brand" href="{% url 'home' %}">JobsMonster</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
