--- a/JobsMonster/templates/hiring/postedit.html
+++ b/JobsMonster/templates/hiring/postedit.html
@@ -20,7 +20,7 @@
               <button
                 class="btn btn-lg btn-primary btn-block text-uppercase text-center"
                 type="submit">
-                Post</button>
+                Edit</button>
               
 
 {% endblock %}
