--- a/JobsMonster/templates/base.html
+++ b/JobsMonster/templates/base.html
@@ -1,76 +1,212 @@
 
 {% load static %}
 
-<!DOCTYPE html>
-
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    
-    <title>Homepage</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="it">
+  <title>JobsMonster</title>
+
+  <!-- bootstrap.min css -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg" style = "height:100px; font-size:30px;">
-        <a class="navbar-brand" href="{% url 'home' %}">JobsMonster</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
 
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-				{% if user.is_authenticated %}
-				<li class="nav-item">
-                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-                </li>
-				{% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">LogIn</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'choice' %}">Register</a>
-                </li>
-				{% endif %}
-                
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+
+<body id="top-header">
+
+<div id="page-loader">
+    <div class="loader-icon fa fa-spin colored-border"></div>
+</div>
+
+    <div class="top-bar bg-dark " id="top-bar">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 col-md-6">
+                    <div class="top-bar-left text-white">
+                        <i class="fa fa-map-marker"></i>
+                        <span class="ml-2">Banepa-07,Kavre</span>
+                    </div>
+                </div>
+            </div>
         </div>
-    </nav>
-    <br>
-    <br />
-  {% block content %}
+    </div>
 
+    <div class="logo-bar d-none d-md-block d-lg-block bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2">
+                    <div class="logo d-none d-lg-block">
+                        <!-- Brand -->
+                        <a class="navbar-brand js-scroll-trigger" href="index.html">
+                            <h2>JobsMonster</h2>
+                        </a>
+                    </div>
+                </div>
 
-  {% endblock %}   
+                <div class="col-lg-8 justify-content-end ml-lg-auto d-flex col-12 col-md-12 justify-content-md-center">
+                    <div class="top-info-block d-inline-flex">
+                        <div class="icon-block">
+                            <i class="ti-mobile"></i>
+                        </div>
+                        <div class="info-block">
+                            <h5 class="font-weight-500">+9779842979259</h5>
+                            <p>ContactUS</p>
+                        </div>
+                    </div>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script type="text/javascript">
-    {% comment %} document.getElementById("Recruiter").onclick = function () {
-        location.href = "{% url 'usersignup' %}"
-    };
-    document.getElementById("freelancer").onclick = function () {
-        location.href = "{% url 'professionalsignup' %}" {% endcomment %}
-    {% comment %} }; {% endcomment %}
-    document.getElementById("Hire").onclick = function () {
-        console.log('clicked')
-        location.href = "{% url 'hire' %}"
-    };
-    </script>
-</body>
-</html>
+                    <div class="top-info-block d-inline-flex">
+                        <div class="icon-block">
+                            <i class="ti-email"></i>
+                        </div>
+                        <div class="info-block">
+                            <h5 class="font-weight-500">Jobsmonster247@gmail.com</h5>
+                            <p>Email Us</p>
+                        </div>
+                    </div>
+                    <div class="top-info-block d-inline-flex">
+                        <div class="icon-block">
+                            <i class="ti-time"></i>
+                        </div>
+                        <div class="info-block">
+                            <h5 class="font-weight-500">24/7 always in your service</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="main-navigation" id="mainmenu-area">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary main-nav navbar-togglable rounded-radius">
+
+                <a class="navbar-brand d-lg-none d-block" href="{% url 'home' %}">
+                    <h4>JobsMonster</h4>
+                </a>
+                <!-- Toggler -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="fa fa-bars"></span>
+                </button>
+
+                <!-- Collapse -->
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <!-- Links -->
+                    <ul class="navbar-nav ">
+                         <li class="nav-item ">
+                            <a href="{% url 'home' %}" class="nav-link js-scroll-trigger">
+                                Home
+                            </a>
+                        </li>
+                        <li class="nav-item ">
+                            <a href="" class="nav-link js-scroll-trigger">
+                                About
+                            </a>
+                        </li>
+                        <li class="nav-item ">
+                            <a href="service.html" class="nav-link js-scroll-trigger">
+                                Services
+                            </a>
+                        </li>
+                        {% if user.is_authenticated %}
+                        <li class="nav-item ">
+                            <a href="{% url 'logout' %}" class="nav-link js-scroll-trigger">
+                                Logout
+                            </a>
+                        </li>
+                        <li class="nav-item ">
+                            <a href="{% url 'userprofile' %}" class="nav-link js-scroll-trigger">
+                                Profile
+                            </a>
+                        </li>
+                        {% else %}
+                        <li class="nav-item ">
+                            <a href="{% url 'login' %}" class="nav-link js-scroll-trigger">
+                                Login
+                            </a>
+                        </li>
+                        <li class="nav-item ">
+                            <a href="{% url 'choice' %}" class="nav-link js-scroll-trigger">
+                                Register
+                            </a>
+                        </li>
+                        {% endif %}
+                        <li class="nav-item ">
+                            <a href="contact.html" class="nav-link">
+                                Contact
+                            </a>
+                        </li>
+                    </ul>
+                </div>             
+                </nav>
+        </div> 
+    </div>
+<br>
+<br>
+<br>
+ <section> 
+{% block content %}
+{% endblock content %}
+</section> 
+<footer>
+    <div class="footer" id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                    <h4> JobsMonster </h4>
+                </div>
+                <div class="col-lg-3 col-sm-2 col-xs-3">
+                    <h3> Contact </h3>
+                    <ul>
+                        <li><a class="email"href="#"> Jobsmonster247@gmail.com </a></li>
+                        <br/>
+                        <li> <p> Banepa-07 </p> </li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-sm-2 col-xs-3">
+                    <ul class="footerabout">
+                        <li> <h5> <a href="#" style="margin-top: 5em"> ABOUT US</a> <h5></li>
+                        <li> <h5><a href="#"> Categories</a> <h5></li>
+                        <li> <h5><a href="#"> ContactUs </a> <h5></li>
+                        <li> <h5><a href="#"> Developers </a> <h5></li>
+                    </ul>
+                </div>
+               
+            <!--/.row--> 
+        </div>
+        <!--/.container--> 
+    </div>
+    <!--/.footer-->
+                          
+    <div class="footer-bottom">
+        <div class="container">
+            <p class="pull-left copyright"> Copyright © JobsMonster 2021. All right reserved. </p>
+       
+        </div>
+    </div>
+    <!--/.footer-bottom--> 
+
+</footer>
+    <!-- Main jQuery -->
+    <script src="plugins/jquery/jquery.min.js"></script>
+    <!-- Bootstrap 3.1 -->
+    <script src="plugins/bootstrap/js/popper.min.js"></script>
+    <script src="plugins/bootstrap/js/bootstrap.min.js"></script>
+    <!-- Slick Slider -->
+    <script src="plugins/slick-carousel/slick/slick.min.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
+    <!-- Map Js -->
+    <script src="plugins/google-map/gmap3.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwIQh7LGryQdDDi-A603lR8NqiF3R_ycA"></script>
+
+    <script src="js/form/contact.js"></script>
+    <script src="js/theme.js"></script>
+
+  </body>
+  </html>
+   
