--- a/JobsMonster/templates/jobs/jobs_home.html
+++ b/JobsMonster/templates/jobs/jobs_home.html
@@ -1,18 +1,46 @@
 
 
 <div class="container">
+    <div class="row">
+        <div class="col-6">
+            <button class="btn btn-success">View All Category</button>
+        </div>
+        <div class="col-6">
+            <button class="btn btn-secondary">View Jobs of my Category</button>
+        </div>
+    </div>
+    <br>
+    <br>
     {% for job in jobs %}
-    <div class="jobs">
+        <div class="row jobs">
+            <div class="col-lg-10">
         <h2 class="job-title">{{job.title|title}}</h2>
         <h4 class="job-category">{{job.category}}</h4>
         <p class="job-description">{{job.description}}</p>
         <div class="actions">
-            <button class="btn btn-secondary">Details</button>
+            <a href="{% url 'jobdetail' job.id %}"><button class="btn btn-secondary">Details</button></a>
             <button class="btn btn-primary">Apply Now</button>
         </div>
     </div>
+</div>
     {% endfor %}
 </div>
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
 
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
 
 
