--- a/JobsMonster/templates/user/login.html
+++ b/JobsMonster/templates/user/login.html
@@ -15,16 +15,17 @@
           <h5 class="card-title text-center"><b>Login Here</b></h5>
           <form class="form-signin" method="POST">
             {% csrf_token %}
-            <fieldset class="form-group">
+            <fieldset class="form-group text-center">
               <br />
                 <label for="email">Email:</label><br>
-                <input type="text" name="email" value="" placeholder="Enter Email">
+                <input type="text" name="email" value="" style="width: 60%;" placeholder="Enter Email">
                     <br><br>
                 <label for="username">Password:</label><br>
-                <input type="password" name="password" value="" placeholder="Enter password"><br>
+                <input type="password" name="password" value="" style="width: 60%;" placeholder="Enter password"><br>
   
             </fieldset>
-            <div class="form-group">
+            <br>
+            <div class="form-group text-center">
               <button
                 class="btn btn-lg btn-primary btn-block text-uppercase"
                 type="submit"
@@ -33,8 +34,10 @@
               ><br />
             </div>
           </form>
-          <br>
+          <br><div class="text-center">
         <small>Don't have an account?? signup <a href="{% url 'usersignup' %}">Here</a></small>
+
+          </div>
         </div>
       </div>
     </div>
