--- a/JobsMonster/templates/user/professionalregister.html
+++ b/JobsMonster/templates/user/professionalregister.html
@@ -13,7 +13,7 @@
               <br />
               {{ form|crispy }}
             </fieldset>
-            <div class="form-group">
+            <div class="form-group text-center">
               <button
                 class="btn btn-lg btn-primary btn-block text-uppercase"
                 type="submit"
