--- a/JobsMonster/templates/user/register.html
+++ b/JobsMonster/templates/user/register.html
@@ -14,7 +14,7 @@
               <br />
               {{ form|crispy }}
             </fieldset>
-            <div class="form-group">
+            <div class="form-group text-center">
               <button
                 class="btn btn-lg btn-primary btn-block text-uppercase"
                 type="submit"
